# localai

./: .gitignore  .mcp.json.disabled  AI_CAPABILITIES_MATRIX.md  CONSOLIDATE-MODELS-PLAN.md  PROJECT-STATUS-COMPLETE.md  STEP1-AUDIO-EXTRACTION.md  STEP1-COMPLETE.md  STEP1-QUICKSTART.md  STEP3-IMAGE-GENERATION-APPROACH.md  STEP3-N8N-INTEGRATION-COMPLETE.md  STEPS-1-2-COMBINED.md  WINDOWS-DEFENDER-SETUP.md  build.sh  check-defender-exclusions.sh  configure-windows-defender-exclusions.bat  configure-windows-defender-exclusions.ps1  docker-compose.host-cache.yml  docker-compose.yml  install-security-tools.sh  rebuild.sh  security-scan-excluded-dirs.sh  setup.sh  start.sh  start_services.py  stop.sh  test-infinitetalk-inference-internal.sh  test-infinitetalk-inference.sh  test-step1-2-3-pipeline.sh  test-step1-2-combined.sh  test-step1-audio-extraction.sh  test-step2-voice-clone.sh  test-step3-portrait-gen.sh  test-step4-video-generation.sh  test-video5-optimization.sh  update.sh
custom_code/: enhanced-ai-prompt.txt
custom_code/shorts-generator/: CLAUDE.md  Dockerfile  HUMAN_IN_THE_LOOP.md  IMAGE_APPROVAL_IMPLEMENTATION.md  README.md  api.py  app.py  gradio_ui.py  models.py  n8n_client.py  pyproject.toml
custom_code/shorts-generator/tests/: __init__.py  test_api.py  test_models.py  test_n8n_client.py
docs/: COMFYUI-WAN-SETUP-COMPLETE.md  LLAMA_SETUP.md  N8N_FOLDER_CONSOLIDATION.md  SECURITY-SCAN-GUIDE.md  STEP2-VOICE-CLONING.md  STEP3-WAN-PORTRAIT-WORKFLOW-READY.md  STEP4-COMPLETE.md
infinitetalk-api-server/: Dockerfile  README.md  requirements.txt
nginx/: nginx.conf
(+169 files in other folders)
