[project]
name = "shorts-generator"
version = "0.1.0"
description = "Gradio interface for generating inspirational quote images via n8n workflow"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.2",
    "gradio>=5.49.1",
    "httpx>=0.28.1",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "rich>=14.1.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.2",
    "pytest-mock>=3.15.0",
    "ruff>=0.14.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
